--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "install-peerdeps": "^1.8.0",
