--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "contactmanager",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http//apgomez85.github.io/contactmanager",
   "dependencies": {
     "ajv": "^6.0.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.0",
     "install-peerdeps": "^1.8.0",
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
@@ -18,6 +20,7 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
